<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="price_usd">00.00</string>
    <string name="OneHour">1hr:</string>
    <string name="OneHourPercentage">0.00%</string>
    <string name="TwentyFourHour">24hr:</string>
    <string name="TwentyFourHourPercentage">0.00%</string>
    <string name="SevenDays">7d:</string>
    <string name="SevenDayPercentage">0.00%</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_screen">Dashboard Screen</string>
</resources>