<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:paddingBottom="10dp">


    <ImageView
        android:id="@+id/coinIcon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/coinSymbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="BTC"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/coinIcon"
        app:layout_constraintTop_toTopOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/coinDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="|"
        app:layout_constraintStart_toEndOf="@+id/coinSymbol"
        app:layout_constraintTop_toTopOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/coinName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Bitcoin"
        app:layout_constraintStart_toEndOf="@+id/coinDivider"
        app:layout_constraintTop_toTopOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/priceUsdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price_usd"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="$"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/priceUsdText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/oneHourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/OneHour"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/percentChange1hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/OneHourPercentage"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/twentyFourHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:text="@string/TwentyFourHour"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/percentChange24hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:text="@string/TwentyFourHourPercentage"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:text="@string/SevenDays"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/percentChange7dayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:text="@string/SevenDayPercentage"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon" />

    <CheckBox
        android:id="@+id/favorite_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coinIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>